--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ filelock==3.19.1
 Flask==3.1.2
 fonttools==4.60.0
 fsspec==2025.9.0
+fvcore
 greenlet==3.2.4
 h5py==3.14.0
 hf-xet==1.1.10
@@ -110,6 +111,7 @@ tzdata==2025.2
 -e git+ssh://git@github.com/facebookresearch/uco3d.git@8f7075dbb3e9b18c33c4038c189815a001e295bc#egg=uco3d
 urllib3==2.5.0
 -e git+ssh://git@github.com/facebookresearch/vggt.git@e56963328b7476e615ce8dda9164d381f8dc07a3#egg=vggt
+wcmatch==10.1
 wcwidth==0.2.14
 Werkzeug==3.1.3
 widgetsnbextension==4.0.14
