--- a/configs/dataset/scannetppv2/default.yaml
+++ b/configs/dataset/scannetppv2/default.yaml
@@ -20,7 +20,7 @@ train:
   dataset_resolution: ${training.resolution.train}
   principal_point_centered: ${dataset.principal_point_centered}
   aug_crop: 16
-  transform: 'colorjitter+grayscale'
+  transform: 'colorjitter+grayscale+gaublur'
   data_norm_type: ${model.data_norm_type}
   overfit_num_sets: null
   variable_num_views: ${dataset.train.variable_num_views}
