--- a/configs/train_vggt.yaml
+++ b/configs/train_vggt.yaml
@@ -8,27 +8,36 @@ defaults:
 
 # -- Training
 training:
-  optim:
-    frozen_submodules:
-    - "aggregator.patch_embed"
+  #optim:
+  #  frozen_submodules:
+  #  - "aggregator.patch_embed"
   checkpoint:
     resume_checkpoint_path: ???
 
 # -- Model
 model:
-  pretrained_patch_embed_path: ???
+  pretrained_patch_embed_path: ywyue/FiT3D
   model_config:
     embed_dim: 768
     enable_point: false
     enable_track: false
-    aggregator_config: ???
-    camera_head_config: ???
-    depth_head_config: ???
+    aggregator_config:
+      depth: 12
+      num_heads: 8
+      mlp_ratio: 2
+      num_register_tokens: 0
+      patch_embed: "dinov2_vitb14_reg"
+    camera_head_config:
+      trunk_depth: 4
+      num_heads: 8
+      mlp_ratio: 2
+    depth_head_config:
+      intermediate_layer_idx: [2, 5, 8, 11]
 
 # Wandb
 wandb:
-  project: fake-project
-  entity: fake-entity
+  project: ???
+  entity: ???
 
 # Paths for convenience
 root_data_dir: ${machine.root_data_dir}
