--- a/configs/train_vggt.yaml
+++ b/configs/train_vggt.yaml
@@ -8,15 +8,24 @@ defaults:
 
 # -- Training
 training:
+  # uncomment if debugging
+  max_epochs: 2
+  max_train_iters: 5
+  max_val_iters: 5
+  logging:
+    log_freq: 1
+    wandb:
+      project: ???
+      entity: ???
   #optim:
   #  frozen_submodules:
   #  - "aggregator.patch_embed"
-  checkpoint:
-    resume_checkpoint_path: ???
+  #checkpoint:
+  #  resume_checkpoint_path: ???
 
 # -- Model
 model:
-  pretrained_patch_embed_path: ywyue/FiT3D
+  #pretrained_patch_embed_path: ywyue/FiT3D
   model_config:
     embed_dim: 768
     enable_point: false
@@ -25,7 +34,7 @@ model:
       depth: 12
       num_heads: 8
       mlp_ratio: 2
-      num_register_tokens: 0
+      num_register_tokens: 4
       patch_embed: "dinov2_vitb14_reg"
     camera_head_config:
       trunk_depth: 4
@@ -33,11 +42,6 @@ model:
       mlp_ratio: 2
     depth_head_config:
       intermediate_layer_idx: [2, 5, 8, 11]
-
-# Wandb
-wandb:
-  project: ???
-  entity: ???
 
 # Paths for convenience
 root_data_dir: ${machine.root_data_dir}
