--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ filelock==3.19.1
 Flask==3.1.2
 fonttools==4.60.0
 fsspec==2025.9.0
-fvcore
+fvcore==0.1.5.post20221221
 greenlet==3.2.4
 h5py==3.14.0
 hf-xet==1.1.10
@@ -48,7 +48,7 @@ narwhals==2.6.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
-numpy
+numpy==2.1.3
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
 nvidia-cuda-nvrtc-cu12==12.8.93
@@ -108,10 +108,8 @@ transformers==4.56.2
 triton==3.4.0
 typing_extensions==4.15.0
 tzdata==2025.2
--e git+ssh://git@github.com/facebookresearch/uco3d.git@8f7075dbb3e9b18c33c4038c189815a001e295bc#egg=uco3d
 urllib3==2.5.0
--e git+ssh://git@github.com/facebookresearch/vggt.git@e56963328b7476e615ce8dda9164d381f8dc07a3#egg=vggt
-wandb
+wandb==0.22.3
 wcmatch==10.1
 wcwidth==0.2.14
 Werkzeug==3.1.3
