fix(config): train_vggt config checkpoint for training on 8x rtx_3090

--- a/configs/train_vggt.yaml
+++ b/configs/train_vggt.yaml
@@ -8,19 +8,17 @@ defaults:
 
 # -- Training
 training:
-  # uncomment / change if memory issues
-  max_num_of_imgs_per_gpu: 24
+  # - uncomment / change if memory issues
+  max_num_of_imgs_per_gpu: 32
   accum_steps: 3
-  resolution:
-    train: (448, 448)
-  # uncomment / change if debugging
-  max_epochs: 3
-  max_train_iters: 5
-  max_val_iters: 3
+  # - uncomment / change if debugging
+  max_epochs: 20
+  #max_train_iters: 2
+  #max_val_iters: 2
   logging:
-    log_freq: 1  # set to 1 for debugging
+    log_freq: 10  # set to 1 for debugging
     wandb:
-      name: train-normal_debug
+      name: train-normal
       project: vggt-train
       entity: tsiebert
   #optim:
