--- a/configs/dataset/scannetppv2/default.yaml
+++ b/configs/dataset/scannetppv2/default.yaml
@@ -17,7 +17,7 @@ train:
       num_views=${dataset.scannetppv2.train.num_views},
       covisibility_thres=${dataset.scannetppv2.train.covisibility_thres})"
   split: 'train'
-  dataset_resolution: ${training.resolution.train}
+  dataset_resolution: ${dataset.resolution.train}
   principal_point_centered: ${dataset.principal_point_centered}
   aug_crop: 16
   transform: 'colorjitter+grayscale+gaublur'
@@ -43,7 +43,7 @@ val:
       num_views=${dataset.scannetppv2.val.num_views},
       covisibility_thres=${dataset.scannetppv2.val.covisibility_thres})"
   split: 'val'
-  dataset_resolution: ${training.resolution.val.scannetppv2}
+  dataset_resolution: ${dataset.resolution.val.scannetppv2}
   principal_point_centered: ${dataset.principal_point_centered}
   seed: 777
   transform: 'imgnorm'
@@ -68,7 +68,7 @@ test:
       num_views=${dataset.scannetppv2.test.num_views},
       covisibility_thres=${dataset.scannetppv2.test.covisibility_thres})"
   split: 'test'
-  dataset_resolution: ${training.resolution.val.scannetppv2}
+  dataset_resolution: ${dataset.resolution.val.scannetppv2}
   principal_point_centered: ${dataset.principal_point_centered}
   seed: 777
   transform: 'imgnorm'
