--- a/configs/machine/local.yaml
+++ b/configs/machine/local.yaml
@@ -5,4 +5,7 @@ cvg_dir: "/cluster/project/cvg/students/tsiebert"
 root_data_dir: "${.cvg_dir}/datasets"
 mapanything_metadata_dir: "${.root_data_dir}/map-anything-dataset/mapanything_dataset_metadata"
 checkpoints_dir: "${.cvg_dir}/checkpoints"
-logging_dir: "/cluster/home/tsiebert/3DFeatProbe/logs"
+
+projecct_root: "/cluster/home/tsiebert/3DFeatProbe"
+logging_dir: "${.projecct_root}/logs"
+results_dir: "${.projecct_root}/results"
