--- a/configs/calibration_benchmark.yaml
+++ b/configs/calibration_benchmark.yaml
@@ -17,7 +17,7 @@ amp:
 model:
   load_pretrained: true
 
-output_dir: ${machine.results_dir}
+output_dir: ${machine.results_dir}/single_view_calibration
 root_data_dir: ${machine.root_data_dir}
 mapanything_metadata_dir: ${machine.mapanything_metadata_dir}
 checkpoint_path: null
