--- a/configs/model/dinov2.yaml
+++ b/configs/model/dinov2.yaml
@@ -1,11 +1,11 @@
 defaults:
   - default
 
-model_id: "backbones/dinov2"
+model_id: backbone/dinov2
 # alternatively, specify the Uniception preprocessor and set preprocess_image to false
 data_norm_type: "identity"
 model_config:
   backbone: "base"
-  use_timm: false
+  use_timm: true
   with_registers: true
-  preprocess_image: true
+  preprocess_images: true
