--- a/configs/model/dinov3.yaml
+++ b/configs/model/dinov3.yaml
@@ -1,9 +1,9 @@
 defaults:
   - default
 
-model_id: "backbones/dinov3"
+model_id: backbone/dinov3
 # alternatively, specify the Uniception preprocessor and set preprocess_image to false
 data_norm_type: "identity"
 model_config:
   backbone: "base"
-  preprocess_image: true
+  preprocess_images: true
