--- a/configs/dataset/benchmark_calibration.yaml
+++ b/configs/dataset/benchmark_calibration.yaml
@@ -15,5 +15,5 @@ resolution:
 # ETH3D: 13 scenes
 # ScanNet++V2: 30 scenes
 test_dataset:
-  "+ 260 @ ${dataset.eth3d_wai.test.dataset_str}
-  + 600 @ ${dataset.scannetpp_wai.test.dataset_str}"
+  "+ 260 @ ${dataset.eth3d.test.dataset_str}
+  + 600 @ ${dataset.scannetppv2.test.dataset_str}"
