--- a/configs/model/dinov2.yaml
+++ b/configs/model/dinov2.yaml
@@ -1,7 +1,7 @@
 defaults:
   - default
 
-model_id: backbone/dinov2
+model_id: feature_extractor/dinov2
 # alternatively, specify the Uniception preprocessor and set preprocess_image to false
 data_norm_type: "identity"
 model_config:
