--- a/configs/model/dinov3.yaml
+++ b/configs/model/dinov3.yaml
@@ -5,5 +5,6 @@ model_id: feature_extractor/dinov3
 # alternatively, specify the Uniception preprocessor and set preprocess_image to false
 data_norm_type: "identity"
 model_config:
+  checkpoint_path: null
   backbone: "base"
   preprocess_images: true
