--- a/configs/train_vggt.yaml
+++ b/configs/train_vggt.yaml
@@ -1,6 +1,6 @@
 ### Config for VGGT retrain experiment
 defaults:
-  - machine: euler
+  - machine: clariden
   - model: vggt
   - training: vggt
   - dataset: multi_dataset_train
@@ -9,37 +9,38 @@ defaults:
 # -- Training
 training:
   # - uncomment / change if memory issues
-  max_num_of_imgs_per_gpu: 32
-  accum_steps: 3
+  max_num_of_imgs_per_gpu: 48
+  accum_steps: 2
   # - uncomment / change if debugging
-  max_epochs: 20
-  #max_train_iters: 2
-  #max_val_iters: 2
+  max_epochs: 50
+  #max_train_iters: 3
+  #max_val_iters: 3
   logging:
     log_freq: 10  # set to 1 for debugging
     wandb:
-      name: train-normal
+      name: train-vggt-dinov2base
       project: vggt-train
       entity: tsiebert
   optim:
     frozen_submodules:
       - "aggregator.patch_embed"
   checkpoint:
-    resume_checkpoint_path: null
+    job_id: 27tavi
+    resume_checkpoint_path: null #/capstor/scratch/cscs/tsiebert/checkpoints/checkpoint-last_vggt.pt
 
 # -- Model
 model:
   model_config:
     embed_dim: 768
     enable_point: true
-    patch_emed_config:
+    patch_embed_config:
       model_id: feature_extractor/dinov2
       model_config:
         checkpoint_path: null
         backbone: "base"
         use_timm: true
         with_registers: true
-        preprocess_images: false
+        preprocess_images: false  # aggregator does this for us
     aggregator_config:
       depth: 8
       num_heads: 8
