--- a/configs/dataset/default.yaml
+++ b/configs/dataset/default.yaml
@@ -3,6 +3,7 @@ defaults:
   - mvs_synth: default
   - blendedmvs: default
   - scannetppv2: default
+  - unrealstereo4k: default
   - eth3d: default
 
 # Training Set, For example: BlendedMVS(split='train', resolution=(512, 384), transform=...)
