--- a/configs/training/vggt.yaml
+++ b/configs/training/vggt.yaml
@@ -64,6 +64,14 @@ logging:
       - loss_conf_point
       - loss_reg_point
       - loss_grad_point
+      # uncomment if tracking benchmark metrics
+      - score_pointmaps_abs_rel
+      - score_pointmaps_inlier_thres_103
+      - score_pose_ate_rmse
+      - score_pose_auc_30
+      - score_z_depth_abs_rel
+      - score_z_depth_inlier_thres_103
+      - score_ray_dirs_err_deg
 loss:
   loss_fn: "MultitaskLoss"
   loss_config:
