--- a/configs/model/mum.yaml
+++ b/configs/model/mum.yaml
@@ -1,8 +1,4 @@
 defaults:
-  - default
+  - feature_extractor
 
 model_id: feature_extractor/mumvisiontransformer
-data_norm_type: "identity"
-model_config:
-  checkpoint_path: null
-  preprocess_images: true
