--- a/configs/dataset/multi_dataset_train.yaml
+++ b/configs/dataset/multi_dataset_train.yaml
@@ -11,11 +11,13 @@ train:
 
 # Training dataset
 train_dataset:
-  "+ 160_000 @ ${dataset.blendedmvs.train.dataset_str}
-  + 80_000 @ ${dataset.mvs_synth.train.dataset_str}
-  + 40_000 @ ${dataset.unrealstereo4k.train.dataset_str}"
+  "+ 75_000 @ ${dataset.blendedmvs.train.dataset_str}
+  + 75_000 @ ${dataset.mvs_synth.train.dataset_str}
+  + 75_000 @ ${dataset.scannetppv2.train.dataset_str}
+  + 25_000 @ ${dataset.unrealstereo4k.train.dataset_str}"
 # Validation dataset
 test_dataset:
-  "+ 4_000 @ ${dataset.blendedmvs.val.dataset_str}
-  + 3_000 @ ${dataset.mvs_synth.val.dataset_str}
-  + 1_00 @ ${dataset.unrealstereo4k.val.dataset_str}"
+  "+ 2_000 @ ${dataset.blendedmvs.val.dataset_str}
+  + 2_000 @ ${dataset.mvs_synth.val.dataset_str}
+  + 2_000 @ ${dataset.scannetppv2.val.dataset_str}
+  + 500 @ ${dataset.unrealstereo4k.val.dataset_str}"
