--- a/configs/dataset/benchmark_multiview_correspondence.yaml
+++ b/configs/dataset/benchmark_multiview_correspondence.yaml
@@ -10,7 +10,8 @@ num_views: 4
 # BlendedMVS: 43 scenes
 # MVSSynth: 6 scenes
 # Unrealstereo4k: 1 scene
+
+# NOTE: only used blendedmvs and sppv2 because other datasets didn't have enough scenes
 test_dataset:
   "860 @ ${dataset.blendedmvs.val.dataset_str}
-  + 120 @ ${dataset.mvs_synth.val.dataset_str}
-  + 600 @ {dataset.scannetppv2.val.dataset_str}"
+  + 600 @ ${dataset.scannetppv2.val.dataset_str}"
