docs: add readmes for general setup and project structure

--- a/configs/calibration_benchmark.yaml
+++ b/configs/calibration_benchmark.yaml
@@ -3,7 +3,7 @@
 # - we only do num_views: 1
 # - we have multi-resolution sampling
 defaults:
-  - machine: clariden
+  - machine: default
   - model: vggt
   - dataset: benchmark_calibration
   - _self_
@@ -13,7 +13,7 @@ seed: 0
 # Disable CUDNN Benchmark (Disable for variable resolution & number of view training)
 disable_cudnn_benchmark: true
 # Batch size for inference (Metrics are computed per multi-view set and averaged, not per batch of multi-view sets)
-batch_size: 20
+batch_size: 24
 # Use mixed precision for inference
 amp:
   enabled: true
