--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ description = "Analyzing 3D awareness in Vision Transformers"
 requires-python = ">=3.11"
 dependencies = [
     "addict==2.4.0",
+    "annotated-types==0.7.0",
     "antlr4-python3-runtime==4.9.3",
     "asttokens==3.0.0",
     "attrs==25.3.0",
     "av==12.0.0",
     "blinker==1.9.0",
+    "bracex==2.6",
     "certifi==2025.8.3",
     "charset-normalizer==3.4.3",
     "click==8.3.0",
@@ -31,17 +33,22 @@ dependencies = [
     "fonttools==4.60.0",
     "fsspec==2025.9.0",
     "fvcore==0.1.5.post20221221",
+    "gitdb==4.0.12",
+    "GitPython==3.1.46",
     "greenlet==3.2.4",
     "h5py==3.14.0",
     "hf-xet==1.1.10",
     "huggingface-hub==0.35.0",
+    "hydra-core==1.3.2",
     "idna==3.10",
     "imageio==2.37.0",
     "importlib_metadata==8.7.0",
+    "iopath==0.1.10",
     "ipython==9.6.0",
     "ipython_pygments_lexers==1.1.1",
     "ipywidgets==8.1.7",
     "itsdangerous==2.2.0",
+    "jaxtyping==0.3.9",
     "jedi==0.19.2",
     "Jinja2==3.1.6",
     "joblib==1.5.2",
@@ -84,10 +91,14 @@ dependencies = [
     "platformdirs==4.4.0",
     "plotly==6.3.1",
     "plyfile==1.1.2",
+    "portalocker==3.2.0",
     "prompt_toolkit==3.0.52",
+    "protobuf==6.33.5",
     "psutil==7.1.0",
     "ptyprocess==0.7.0",
     "pure_eval==0.2.3",
+    "pydantic==2.12.5",
+    "pydantic_core==2.41.5",
     "Pygments==2.19.2",
     "pyparsing==3.2.5",
     "pyquaternion==0.9.9",
@@ -102,11 +113,15 @@ dependencies = [
     "safetensors==0.6.2",
     "scikit-learn==1.7.2",
     "scipy==1.16.2",
+    "sentry-sdk==2.53.0",
     "setuptools==80.9.0",
     "six==1.17.0",
+    "smmap==5.0.2",
     "SQLAlchemy==2.0.43",
     "stack-data==0.6.3",
     "sympy==1.14.0",
+    "tabulate==0.9.0",
+    "termcolor==3.3.0",
     "threadpoolctl==3.6.0",
     "timm==1.0.20",
     "tokenizers==0.22.1",
@@ -115,16 +130,21 @@ dependencies = [
     "tqdm==4.67.1",
     "traitlets==5.14.3",
     "transformers==4.56.2",
+    "trimesh==4.11.2",
     "triton==3.4.0",
+    "typing-inspection==0.4.2",
     "typing_extensions==4.15.0",
     "tzdata==2025.2",
+    "uniception==0.1.6",
     "urllib3==2.5.0",
+    "wadler_lindig==0.1.7",
     "wandb==0.22.3",
     "wcmatch==10.1",
     "wcwidth==0.2.14",
     "Werkzeug==3.1.3",
     "widgetsnbextension==4.0.14",
-    "zipp==3.23.0",
+    "yacs==0.1.8",
+    "zipp==3.23.0"
 ]
 
 [project.optional-dependencies]
